<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_visimisi"
            android:title="@string/menu_visimisi" />

        <item
            android:id="@+id/nav_tujuan"
            android:title="@string/menu_tujuan" />

        <item
            android:id="@+id/nav_lulusan"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_lulusan" />

        <item
            android:id="@+id/nav_studi"
            android:title="@string/menu_studi" />

        <item
            android:id="@+id/nav_kurikulum"
            android:title="@string/menu_kurikulum" />

    </group>
</menu>