<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.undira.tiundira.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_visimisi"
        android:name="com.undira.tiundira.ui.visimisi.VisiFragment"
        android:label="@string/menu_visimisi"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tujuan"
        android:name="com.undira.tiundira.ui.tujuan.TujuanFragment"
        android:label="@string/menu_tujuan"
        tools:layout="@layout/fragment_tujuan" />

    <fragment
        android:id="@+id/nav_lulusan"
        android:name="com.undira.tiundira.ui.profil.ProfilFragment"
        android:label="@string/menu_lulusan"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/nav_studi"
        android:name="com.undira.tiundira.ui.studi.StudiFragment"
        android:label="@string/menu_studi"
        tools:layout="@layout/fragment_studi" />

    <fragment
        android:id="@+id/nav_kurikulum"
        android:name="com.undira.tiundira.ui.kurikulum.KurikulumFragment"
        android:label="@string/menu_kurikulum"
        tools:layout="@layout/fragment_kurikulum" />

    <fragment
        android:id="@+id/nav_hubungi"
        android:name="com.undira.tiundira.ui.hubungi.HubungiFragment"
        android:label="@string/menu_hubungi"
        tools:layout="@layout/fragment_hubungi" />

</navigation>