<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.visimisi.VisiFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="187dp"
        android:src="@drawable/banner"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="78dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/isolation_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/menu_visimisi"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/konten_visi"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="46dp"
            android:src="@drawable/tujuan_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/header_misi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/menu_visimisi"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_misi">

            <TableRow>

                <TextView
                    android:id="@+id/dot_kontent_misi_1"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="•" />

                <TextView
                    android:id="@+id/bull_kontent_misi_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="false"
                    android:text="@string/konten_misi_1"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/dot_kontent_misi_2"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="•" />

                <TextView
                    android:id="@+id/bull_kontent_misi_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="false"
                    android:text="@string/konten_misi_2"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/dot_kontent_misi_3"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="•" />

                <TextView
                    android:id="@+id/bull_kontent_misi_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="false"
                    android:text="@string/konten_misi_3"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/dot_kontent_misi_4"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="•" />

                <TextView
                    android:id="@+id/bull_kontent_misi_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="false"
                    android:text="@string/konten_misi_4"
                    android:textColor="@color/black" />
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/dot_kontent_misi_5"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="•" />

                <TextView
                    android:id="@+id/bull_kontent_misi_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="false"
                    android:text="@string/konten_misi_5"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>